# guilde-lite-tdd-sprint

./: .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  Procfile.dev  README.md  conductor-archive.tgz  docker-compose.dev.yml  docker-compose.diagnostic.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: health-status.json  settings.json
.github/: dependabot.yml
backend/: .env.example  .pre-commit-config.yaml  pyproject.toml
backend/.claude/: health-status.json
backend/alembic/versions/: 2026-01-19_add_specs.py  2026-01-19_add_sprints.py  2026-01-20_add_sprint_spec_id.py  2026-01-22_add_failed_status_to_sprintstatus_enum.py  2026-01-22_add_sprint_track_id.py  2026-01-22_add_workflow_timestamps.py  943237da85b0_initial.py  cefa2952f188_add_agent_run_fork_fields.py
backend/app/: admin.py  main.py
backend/app/agents/: assistant.py  deep_research.py  deps.py  prompts.py  ralph_planner.py  sdk_clients.py  sdk_runner.py  sprint_agent.py  web.py
backend/app/agents/orchestration/: __init__.py  checkpoint.py  dispatcher.py  formatter.py  registry.py  telemetry.py
backend/app/agents/tools/: __init__.py  agent_browser.py  agent_integration.py  filesystem.py  http_fetch.py
backend/app/api/: deps.py  exception_handlers.py
backend/app/api/routes/v1/: __init__.py  agent.py  agent_runs.py  health.py  self_heal.py  specs.py  sprints.py  tdd_runs.py  webhooks.py  workflow.py  ws.py
backend/app/clients/: redis.py
backend/app/commands/: codex_guard.py  conductor_plan.py  deep_research.py  qa.py  snapshot_state.py  spec_runner.py  sync_docs.py
backend/app/conductor/: __init__.py  mirror.py  plan_loader.py  store.py
backend/app/core/: cache.py  config.py  logfire_links.py  logfire_setup.py  telemetry.py  websocket_events.py
backend/app/db/models/: __init__.py  agent_run.py  conductor_file.py  diagnostic.py  spec.py  sprint.py  user.py  webhook.py
backend/app/pipelines/: base.py
backend/app/repositories/: __init__.py  agent_run.py  conductor_files.py  session.py  spec.py  sprint.py  sprint_item.py  webhook.py
backend/app/runners/: phase_runner.py
backend/app/runners/evaluators/: __init__.py  deterministic.py  feedback_memory.py  protocol.py  registry.py
backend/app/schemas/: __init__.py  agent_run.py  agent_tdd.py  base.py  diagnostic.py  spec.py  sprint.py  webhook.py  workflow.py
backend/app/services/: __init__.py  agent_run.py  agent_tdd.py  conductor_files.py  self_heal.py  session.py  spec.py  spec_exporter.py  sprint.py  user.py  webhook.py  workflow.py  workflow_tracker.py
backend/app/worker/: celery_app.py
backend/app/worker/tasks/: examples.py  schedules.py
backend/cli/: commands.py
backend/docs/: observability.md
backend/scripts/: anthropic_sdk_smoke.py  debug_config.py  logfire_validate_trace.py  openai_model_permutations.py  openai_sdk_smoke.py  pydanticai_openai_models.py
backend/tests/: conftest.py  test_admin.py  test_agent_browser_comprehensive.py  test_agent_browser_tool.py  test_agent_decision_serialization.py  test_agent_run_service.py  test_agent_tdd_service.py  test_agents.py  test_commands.py  test_conductor_cli.py  test_conductor_file_service.py  test_conductor_mirror.py  test_conductor_plan_loader.py  test_conductor_store.py  test_core.py  test_deep_research_cli.py  test_filesystem_sandbox.py  test_http_fetch_tool.py  test_logfire_links.py  test_phase_runner.py  test_phase_runner_conductor_plan.py  test_planning_judge.py  test_sdk_clients.py  test_skill_installation.py  test_spec_complexity.py  test_sprint_agent.py  test_sprint_item_repository.py  test_sprint_repository.py  test_sprint_schema_track_id.py  test_websocket_events.py  test_worker.py
backend/tests/agents/: test_agent_integration.py  test_agents_sdk_runner.py
backend/tests/agents/orchestration/: __init__.py  test_checkpoint.py  test_dispatcher.py  test_registry.py  test_telemetry.py
backend/tests/api/: test_auth.py  test_exceptions.py  test_health.py  test_specs.py  test_sprint_items_pagination.py  test_sprints.py  test_users.py  test_websocket_auth.py
backend/tests/core/: test_csrf.py
backend/tests/integration/: README.md  conftest.py  test_agent_browser_flow.py  test_agent_browser_hello_world.py  test_agent_browser_hello_world_req.py  test_agent_browser_todolist.py  test_e2e_sprint_flow.py  test_hello_world_sprint.py  test_sdlc_e2e_orchestration.py  test_sdlc_plugin_structure.py  test_sprint_interview_to_code.py  test_sprint_lifecycle.py  test_sprint_workflow_sdk.py  test_sprints_api.py  test_sprints_integration.py  test_tools_live.py
backend/tests/integration/helpers/: __init__.py  preflight.py  test_validation.py  validation.py
backend/tests/unit/: __init__.py  test_evaluators.py
conductor/: evals.md  index.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tooling.md  tracks.md  workflow.md
docs/: adding_features.md  agents-sdk-research.md  ai-research-skills.md  architecture.md  auto-claude-parity.md  cloud-agents.md  conductor-alignment.md  everything-claude-code-review.md  external-links.md  framework-alignment.md  logfire-debug.md  oauth-google.md  patterns.md  project-plan.md  ralph-playbook.md  skills.md  spec-workflow.md  sprints.md  starting-prompt.md  testing.md  todos.md
frontend/: .env.example  README.md  instrumentation.ts  next.config.ts  package.json  playwright.config.ts  playwright.simple.config.ts  vitest.setup.ts
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  secret.yaml.example  service.yaml
(+407 files in other folders)
