[project]
name = "guilde_lite_tdd_sprint"
version = "0.1.0"
description = "A FastAPI project"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your@email.com" }]

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "orjson>=3.11.5",
    "logfire[fastapi,asyncpg]>=4.19.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.1",
    "greenlet>=3.3.0",
    "pyjwt>=2.10.1",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.21",
    "authlib>=1.6.6",
    "httpx>=0.28.1",
    "redis>=6.4.0,<6.5",
    "fastapi-cache2>=0.2.2",
    "slowapi>=0.1.9",
    "fastapi-pagination>=0.15.6",
    "sentry-sdk[fastapi]>=2.50.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "sqladmin>=0.22.0",
    "itsdangerous>=2.2.0",
    "celery[redis]>=5.6.2",
    "flower>=2.0.1",
    "boto3>=1.42.31",
    "pydantic-ai==1.44.0",
    "openai>=2.15.0",
    "anthropic>=0.76.0",
    "httpx>=0.28.1",
    "openai-agents[litellm]>=0.1.0",
    "click>=8.3.1",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "anyio[trio]>=4.12.1",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "ruff>=0.14.13",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "bandit>=1.9.3",
    "vulture>=2.14",
    "xenon>=0.9.3",
    "pylint>=4.0.4",
]

[project.scripts]
guilde_lite_tdd_sprint = "cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "cli"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: integration tests (no mocks)",
    "tui: TUI/CLI-related tests",
]

[tool.fastapi-fullstack]
generator_version = "0.1.14"
generated_at = "2026-01-19T02:08:01.672250+00:00"
